<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewListStyle"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:elevation="@dimen/card_minimum_elevation">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_default_height">

        <ImageView
            android:id="@+id/thumbnailImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_default_height"
            android:contentDescription="@string/article_image_list_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:transitionName="@string/image_article_transition"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/overlay_text_color"
            android:orientation="vertical">

            <TextView
                android:id="@+id/articleTitleTextView"
                style="@style/TextListStyle"
                android:fontFamily="@font/oswald_light"
                tools:text="@string/article_title_text" />

            <TextView
                android:id="@+id/articleSubtitleTextView"
                style="@style/TextListStyle"
                android:drawableStart="@drawable/ic_author_white"
                android:fontFamily="@font/archivo_narrow"
                tools:text="@string/article_author_text" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
